<resources>
    <string name="app_name">Recipes</string>
    <string name="descr_avatar">avatar</string>
    <string name="descr_menu">Menu</string>
    <string name="favorit_button">To favorites</string>
    <string name="remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="description_recipe_save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ToFavorites">To favorites</string>
    <string name="Favorites">Favorites</string>
    <string name="add_recipe">Add recipe</string>
    <string name="FavoritesLabel">Favorites</string>
    <string name="all_recipes">All recipes</string>
    <string name="search_text">"Search recipe"</string>
    <string name="kitchen">"cuisine"</string>
    <string name="Choice_Category">Choice category</string>
    <string name="button_title_ok">OK</string>
    <string name="recipe_editing">Recipe editing…</string>
    <string name="recipe_describe">Recipe describe…</string>
    <string name="recipe_save">Recipe save</string>
    <string name="editing_stage">Editing stage</string>
    <string name="stage_num_title">Stage №</string>
    <string name="set_picture">Set picture</string>
    <string name="emtyDescribe">Recipe description and stages cannot be empty!</string>
    <string name="stage_empty">Stage description can not be empty</string>
    <string-array name="categories">
        <item>European</item>
        <item>Asian</item>
        <item>Pan-Asian</item>
        <item>Eastern</item>
        <item>American</item>
        <item>Russian</item>
        <item>Mediterranean</item>
    </string-array>

</resources>