<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <ImageView
        android:id="@+id/top_avatar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/descr_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flomaster" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="@dimen/author_text_size"
        app:layout_constraintBottom_toBottomOf="@id/top_avatar"
        app:layout_constraintEnd_toStartOf="@id/dropdown_menu"
        app:layout_constraintStart_toEndOf="@id/top_avatar"
        app:layout_constraintTop_toTopOf="@id/top_avatar"
        tools:text="Имя автора рецепта" />


    <ImageButton
        android:id="@+id/dropdown_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/descr_menu"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_avatar"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:textStyle="bold"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"

        tools:text="@tools:sample/lorem" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:textStyle="italic"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/describe"

        tools:text="@tools:sample/lorem" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/kitchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/foot_horiz_spacing"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:text="@string/kitchen"
        android:textStyle="italic"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toEndOf="@id/category"
        app:layout_constraintTop_toBottomOf="@id/describe" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author,top_avatar" />

    <ToggleButton
        android:id="@+id/toggleButtonFavorit"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:checked="false"
        android:textColor="@color/red"
        android:textOff="@string/ToFavorites"
        android:textOn="@string/FavoritesLabel"

        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/describe" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/photo"
        android:layout_width="@dimen/width_photo_pic"
        android:layout_height="@dimen/height_photo_pic"

        android:layout_margin="@dimen/common_spacing"
        android:src="@drawable/balance_food"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="photo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />



</androidx.constraintlayout.widget.ConstraintLayout>